--- a/frontend/src/components/TextInput/TextInput.module.scss
+++ b/frontend/src/components/TextInput/TextInput.module.scss
@@ -14,6 +14,14 @@
   }
 }
 
+.text{
+  color: inherit;
+}
+
+.password {
+  color: inherit;
+}
+
 .inputElement {
   display: block;
   width: 100%;
