--- a/frontend/src/pages/Login/Login.module.scss
+++ b/frontend/src/pages/Login/Login.module.scss
@@ -3,10 +3,6 @@
 }
 
 .main {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 1rem;
-  overflow:auto;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -22,7 +18,8 @@
 }
 
 .form {
-  width: 440px;
+  max-width: 440px;
+  width: 100%;
   margin: 0 auto;
 
   > * {
