frontend routing and nav, backend swagger and start of images service

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -5,6 +5,8 @@
   --sansSerifFont: 'Inter', 'Helvetica', sans-serif;
 
   --font20: 1.25rem;
+  --font18: 1.125rem;
+
   --font16: 1rem;
   --font14: .875rem;
   --font13: .8125rem;
