better image support, swagger documentation

--- a/frontend/src/pages/Dashboard/Dashboard.module.scss
+++ b/frontend/src/pages/Dashboard/Dashboard.module.scss
@@ -10,6 +10,9 @@ $secondCollapse: 800px;
 
   main {
     padding: 0 1rem;
+    width: 100%;
+    max-width: 800px;
+    margin: 0 auto;
   }
 
   .notifications {
