--- a/frontend/src/components/Nav/Nav.module.scss
+++ b/frontend/src/components/Nav/Nav.module.scss
@@ -8,7 +8,8 @@ $hamburgerWidth: 600px;
   align-items: center;
   top:0;
   height: var(--navHeight);
-
+  z-index: 10;
+  
   .logo {
     height: 38px;
 
