--- a/frontend/src/pages/Users/Users.module.scss
+++ b/frontend/src/pages/Users/Users.module.scss
@@ -1,10 +1,10 @@
 $firstCollapse: 1100px;
-$secondCollapse: 900px;
+$secondCollapse: 1000px;
 
 
 .dashboard {
   display: grid;
-  grid-template-columns: 300px 1fr 280px;
+  grid-template-columns: 300px 1fr;
 
   height: 100%;
 
