--- a/frontend/src/components/UserEditor/PasswordModal.module.scss
+++ b/frontend/src/components/UserEditor/PasswordModal.module.scss
@@ -1,26 +1,8 @@
-.wrapper {
-  height: 100vh;
-  width: 100vw;
-  background: rgba(0, 0, 0, 0.158);
-  backdrop-filter: blur(8px);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 10;
-}
-
-.inner {
-  background: var(--colBg);
-  padding: 2rem;
-  width: 100%;
-  max-width: 500px;
-  form > *:not(:last-child) {
+ .form {
+  > *:not(:last-child) {
     margin-bottom: 2rem;
   }
-
+  
   .bottomButtons {
     display: flex;
     justify-content: flex-end;
@@ -30,18 +12,4 @@
   .error {
     color: rgb(190, 30, 30);
   }
-
-  // input, label {
-  //   display: block;
-  // }
-
-  // // label {
-  // //   color: rgb(94, 94, 94);
-  // //   margin-bottom: .3rem;
-  // // }
-
-  // input {
-  //   margin-bottom: .8rem;
-
-  // }
 }
