--- a/frontend/src/components/UserEditor/UserEditor.module.scss
+++ b/frontend/src/components/UserEditor/UserEditor.module.scss
@@ -3,9 +3,18 @@
   overflow-x: auto;
   max-width: 100%;
   
+  .addUser {
+    margin: 1rem 0 1rem 0;
+    @media (max-width: 1100px) {
+      margin: 0;
+    
+    }
+  }
+
   table {
     font-size: var(--font14);
     margin: 0 auto;
+    width: 100%;
   
     th {
       text-align: left;
@@ -14,7 +23,7 @@
     }
   
     th, td {
-      padding: .6rem 0 0 .4rem;
+      padding: 1em .4rem 0 .4rem;
     }
   
     td {
@@ -182,6 +191,7 @@
       display: grid;
       grid-template-columns: 1fr 1fr;
       width: 100%;
+      padding: 1.5rem 0 0 0;
 
       td {
         padding: .4rem 0 1rem 0;
