--- a/frontend/src/components/Post/PostEditor.module.scss
+++ b/frontend/src/components/Post/PostEditor.module.scss
@@ -1,11 +1,16 @@
 .postEditor {
   width: 100%;
   display: grid;
-  grid-template-columns: 1fr 300px;
+  grid-template-columns: 1fr minmax(100px, 250px);
 }
 
 .main {
   padding: 0 3rem;
+  max-height: 100vh;
+  overflow-y: scroll;
+  max-width: 1400px;
+  margin: 0 auto;
+
   >* {
     margin-bottom: 4rem;
   }
@@ -15,7 +20,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 2rem;
-  
+
   textarea {
     font-family: var(--monospaceFont);
     font-size: var(--font16);
@@ -23,6 +28,7 @@
     padding: 2rem;
     width: 100%;
     height: 100%;
+    resize: none;
 
     &:focus {
       outline: none;
