--- a/frontend/src/components/Post/PostEditor.module.scss
+++ b/frontend/src/components/Post/PostEditor.module.scss
@@ -52,7 +52,6 @@
   .top {
     flex: 1;
     padding: 2rem;
-
   }
 
   .bottom {
@@ -62,4 +61,11 @@
     border-top: 1px solid var(--colDivLines);
     padding: 1.5rem 2rem 2rem 2rem;
   }
+}
+
+.buttonBar {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 3rem;
+  gap: 1rem
 }
