--- a/frontend/src/pages/Users/Users.module.scss
+++ b/frontend/src/pages/Users/Users.module.scss
@@ -1,39 +1,8 @@
-$firstCollapse: 1100px;
-$secondCollapse: 800px;
-
-
-.dashboard {
-  display: grid;
-  grid-template-columns: 300px 1fr;
-
-  height: 100%;
-
-  main {
-    padding: 0 1rem;
-    width: 100%;
-    max-width: 900px;
-    margin: 0 auto;
-  }
-
-  .notifications {
-    border-left: 1px solid var(--colDivLines);
-    padding: 2rem;
-  }
-  
-  @media(max-width: $firstCollapse) {
-    grid-template-columns: 300px 1fr;
-    
-    >*:nth-child(3) {
-      display: none;
-    }
-  }
-
-  @media (max-width: $secondCollapse) {
-    grid-template-columns: 100%;
-    
-    >*:nth-child(1) {
-      display: none;
-    }
-  }
+.users {
+  padding: 0 1rem;
+  width: 100%;
+  max-width: 900px;
+  margin: 0 auto;
 }
+
 
