--- a/frontend/public/App.css
+++ b/frontend/public/App.css
@@ -79,6 +79,16 @@ a {
        url('/fonts/ibm-plex-mono-v6-latin-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
+/* ibm-plex-mono-italic - latin */
+@font-face {
+  font-family: 'IBM Plex Mono';
+  font-style: italic;
+  font-weight: 400;
+  src: local(''),
+       url('../fonts/ibm-plex-mono-v6-latin-italic.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+       url('../fonts/ibm-plex-mono-v6-latin-italic.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+
 /* inter-regular - latin */
 @font-face {
   font-family: 'Inter';
