--- a/frontend/src/components/ImageUpload/ImageUpload.module.scss
+++ b/frontend/src/components/ImageUpload/ImageUpload.module.scss
@@ -3,6 +3,12 @@
   position: relative;
 }
 
+.uploadedImage {
+  .deleteButton {
+    margin-left: auto;
+  }
+}
+
 .label {
   position: relative;
   border: 1px solid #CECECE;
@@ -19,7 +25,7 @@
     align-items: flex-end;
     justify-content: flex-start;
     padding: .4rem;
-    border-color: rgba(255, 255, 255, 0);
+    border: none;
   }
 }
 
@@ -45,7 +51,8 @@
   }
 
   &:focus {
-    outline: 1px solid black;
+    box-shadow: 0px 0px 0px 1px rgb(56, 56, 56);
+    outline: none;
   }
 
   img {
@@ -84,9 +91,15 @@
   width: 100%;
   height: 100%;
   cursor: pointer;
-  object-fit: cover;
   z-index: -1;
   user-select: none;
+}
+
+.realImage img{
+  width: 100%;
+  height: 100%;
+  aspect-ratio: 16/9;
+  object-fit: cover;
 }
 
 .bottom {
@@ -97,7 +110,7 @@
   opacity: 0;
   pointer-events: none;
   
-  .fileSelected & {
+  .fileSelected &, .uploadedImage & {
     opacity: 1;
     pointer-events: all;
   }
