--- a/frontend/src/components/Post/PostEditor.module.scss
+++ b/frontend/src/components/Post/PostEditor.module.scss
@@ -1,13 +1,18 @@
 .postEditor {
   width: 100%;
+  height: 100%;
   display: grid;
-  grid-template-columns: 1fr minmax(100px, 250px);
+  grid-template-columns: 1fr minmax(100px, 300px);
+}
+
+main {
+  height: 100%;
+  width: 100%;
+  overflow-y: auto;
 }
 
 .main {
   padding: 0 3rem;
-  max-height: 100vh;
-  overflow-y: scroll;
   max-width: 1400px;
   margin: 0 auto;
 
@@ -20,7 +25,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 2rem;
-
+  width: 100%;
   textarea {
     font-family: var(--monospaceFont);
     font-size: var(--font16);
