--- a/frontend/src/components/UserEditor/UserEditor.module.scss
+++ b/frontend/src/components/UserEditor/UserEditor.module.scss
@@ -4,10 +4,10 @@
   max-width: 100%;
   
   .addUser {
-    margin: 1rem 0 1rem 0;
+    margin: 1rem 0 3rem auto;
     @media (max-width: 1100px) {
-      margin: 0;
-    
+      margin: 1rem auto 1rem 0;
+
     }
   }
 
