--- a/frontend/src/components/Image/Image.module.scss
+++ b/frontend/src/components/Image/Image.module.scss
@@ -1,3 +1,27 @@
 .image {
-  object-fit: cover;
+  img {
+    object-fit: cover;
+    width: 100%;
+  }
+}
+
+.wrapper {
+  position: relative;
+
+  &::after {
+    content: "";
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    backdrop-filter: blur(12px);
+    opacity: 1;
+    // transition: opacity .3s ease-in;
+    pointer-events: none;
+  }
+
+  &[data-loaded="true"]::after {
+    opacity: 0;
+  }
 }
