--- a/frontend/src/components/Nav/Sidebar.module.scss
+++ b/frontend/src/components/Nav/Sidebar.module.scss
@@ -1,34 +1,54 @@
 .sidebar {
   height: 100%;
-  padding: 3rem; 
   width: 300px;
-
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   border-right: 1px solid var(--colDivLines);
+
+  a {
+    display: block;
+    margin-bottom: 1.6rem;
+    overflow: hidden;
+    white-space: nowrap;
+    font-size: var(--font14);
+    text-overflow: ellipsis;
+  }
 
   ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    font-size: var(--font14);
-    font-weight: 500;
     color: var(--colFont);
 
     a {
-      display: block;
-      margin-bottom: 1.6rem;
-      overflow: hidden;
-      white-space: nowrap;
-      text-overflow: ellipsis;
+      font-weight: 500;
     }
-    
+
     ul {
       padding-left: 1rem;
-      font-weight: 400;
+      a {
+        font-weight: 400;
+      }
+    }
+
+    li {
+      display: block;
     }
   }
 
-  li {
-    display: block;
+  .top, .bottom {
+    padding: 3rem;
+  }
+
+  .bottom {
+    border-top: 1px solid var(--colDivLines);
+
+    a {
+      margin: 0;
+      font-weight: 500;
+      text-align: center;
+    }
   }
 
 }
